볼링 리펙토링1-StatusHistory, Frames  객체 추가